Refactor Mightex SLC LED Controller: Enhance error handling, add enums, and improve test coverage
- Introduced custom exceptions (CommandError, ConnectionError, ValidationError) for better error handling.
- Added Mode and TriggerPolarity enums for clearer mode management.
- Refactored DeviceInfo parsing to handle partial responses gracefully.
- Updated MightexSLC methods to utilize new enums and validation functions.
- Improved test suite with comprehensive unit tests for device info parsing, mode control, and input validation.
- Added a FakeSerial class for mocking serial communication in tests.
- Enhanced documentation and comments throughout the codebase for clarity.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Python interface for Mightex SLC LED controller via RS232"
 readme = "README.md"
 requires-python = ">=3.9"
 authors = [
-    {name = "Logan Hallee"}
+    {name = "Logan Kaising"}
 ]
 
 dependencies = [
@@ -31,7 +31,7 @@ target-version = "py39"
 src = ["src"]
 
 [tool.ruff.lint]
-select = ["E", "F", "I"]
+select = ["E", "F", "I", "UP", "B", "SIM"]
 ignore = []
 
 [tool.pytest.ini_options]
@@ -39,3 +39,7 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+markers = [
+    "hardware: tests that require a physical Mightex SLC controller on /dev/ttyUSB0",
+]
+addopts = "-m 'not hardware'"
